# neptune-explorer

./: Cargo.toml  README.md  design_notes.txt
.cargo/: config.toml
doc/: design_notes.md
src/: alert_email.rs  http_util.rs  lib.rs  main.rs  neptune_rpc.rs  path.rs  shared.rs
src/html/component/: header.rs
src/html/page/: announcement.rs  block.rs  mod.rs  not_found.rs  redirect_qs_to_path.rs  root.rs  tx_output.rs  utxo.rs
src/model/: announcement_selector.rs  announcement_type.rs  app_state.rs  block_selector_extended.rs  config.rs  height_or_digest.rs  mod.rs  output_status.rs  path_block_selector.rs  transparent_utxo_tuple.rs
src/rpc/: block_digest.rs  block_info.rs  circulating_supply.rs  mod.rs  output_status.rs  pow_puzzle.rs  provide_pow_solution.rs  total_supply.rs  utxo_digest.rs
src/web/css/: styles.css
src/web/html/page/: root.html
templates/: web
templates/email/: neptune_blockchain_alert.txt  neptune_rpc_alert.txt
templates/web/css/: pico.min.css  styles.css
templates/web/html/components/: head.html  header.html
templates/web/html/page/: announcement.html  block_info.html  not_found.html  root.html  tx_output.html  utxo.html
