[package]
name = "neptune-explorer"
version = "0.1.0"
edition = "2021"
default-run = "neptune-explorer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "high_rate_attack"
path = "src/bin/high_rate_attack.rs"
required-features = ["attacks"]

[[bin]]
name = "scraper"
path = "src/bin/scraper.rs"
required-features = ["attacks"]

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"

neptune-cash = "0.4.0"
tarpc = { version = "^0.34", features = [
    "tokio1",
    "serde-transport",
    "serde-transport-json",
    "tcp",
] }
clap = "4.5.50"
thiserror = "1.0.69"
boilerplate = { version = "1.0.1" }
html-escaper = "0.2.0"
tower-http = { version = "0.5.2", features = ["fs"] }
readonly = "0.2.13"
url = "2.5.7"
lettre = { version = "0.11.19", features = ["tokio1-native-tls"] }
chrono = "0.4.42"

# only should be used inside main.rs, for the binary.
anyhow = "1.0.100"
arc-swap = "1.7.1"
derive_more = { version = "1.0.0", features = ["display"] }

# not a direct dep.  workaround for weird "could not resolve" cargo error
indexmap = "2.12.0"

blake3 = { version = "1.8.2", optional = true }
rand = { version = "0.9.2", optional = true }
reqwest = { version = "0.12.24", optional  = true }
log = {version = "0.4.28", optional = true}
env_logger = {version = "0.11.8", optional = true}
regex = {version = "1.12.2", optional = true }
futures = {version = "0.3.31", optional = true }

#[dev-dependencies]
test-strategy = "0.4.3"
proptest = "1.9.0"
arbitrary = "1.4.2"
proptest-arbitrary-interop = "0.1.0"
axum_gcra = "0.1.1"

[patch.crates-io]
neptune-cash = { git = "https://github.com/Neptune-Crypto/neptune-core.git", rev = "71f471a526a13ddd41ab4400e1a873471d03ede6" }

[features]
mock = ["dep:blake3", "dep:rand"]
attacks = ["reqwest", "log", "env_logger", "regex", "dep:rand", "futures"]
